caching server configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,17 @@
 version: "2"
 services:
   varnish:
-    image: eeacms/varnish
+    build:
+      context: ./CachingServer/
+    volumes:
+      - ./CachingServer/default.vcl:/usr/local/etc/varnish/default.vcl
     ports:
-    - "3002:6081"
-    - "6085:6085"
+    - "8081:80"
     depends_on:
-    - WebServer1
-    - WebServer2
+    - webserver1
+  webserver1:
+    container_name: webserver1
+    build:
+      context: ./WebServer/
     environment:
-      BACKENDS: "WebServer1 WebServer2"
-      BACKENDS_PORT: "80"
-      DNS_ENABLED: "true"
-      BACKENDS_PROBE_INTERVAL: "3s"
-      BACKENDS_PROBE_TIMEOUT: "1s"
-      BACKENDS_PROBE_WINDOW: "3"
-      BACKENDS_PROBE_THRESHOLD: "2"
-      DASHBOARD_USER: "admin"
-      DASHBOARD_PASSWORD: "admin"
-      DASHBOARD_SERVERS: "varnish"
-      DASHBOARD_DNS_ENABLED: "true"
-  WebServer1:
-    image: website1
-    environment:
-      PORT: "80"
-  WebServer2:
-    image: website2
-    environment:
-      PORT: "80"
+      PORT: "3002:80"
